# home-monitor-rs

./: .travis.yml  Cargo.toml  Dockerfile  README.md  home-monitor-rs.json.example  home-monitor-rs.service  home-monitor.json.example
.github/workflows/: rust-build-deb.yml  rust-code-checks.yml
src/: control.rs  main.rs  monitor.rs  networking.rs
src/configuration/: api.rs  dependencies.rs  device.rs  files.rs  logging.rs  machine.rs  mod.rs  network.rs  web.rs
src/dom/: device.rs  machine.rs  mod.rs
src/dom/communication/: device.rs  mod.rs  mpsc_sender.rs  noop_sender.rs  sender.rs  shared_state.rs
src/networking/: controllable_server.rs  fast_pinger.rs  mod.rs  networking_error.rs  ping.rs  pinger.rs  port_checker.rs  shutdown.rs  shutdown_error.rs  shutdown_server.rs  ssh2_server.rs  ssh2_shutdown_server.rs  tcp_port_checker.rs  wake_on_lan_server.rs  wakeup_server.rs
src/utils/: always_off.rs  always_off_file.rs  always_on.rs  always_on_file.rs  mac_addr.rs  mod.rs
src/web/: mod.rs  server.rs  shared_state_sync.rs
src/web/api/: always_off.rs  always_on.rs  config.rs  error.rs  internal_server_error.rs  mod.rs  result.rs  shutdown.rs  status.rs  wakeup.rs
src/web/api/server/: always_off.rs  always_on.rs  mod.rs  shutdown.rs  status.rs  unknown_device_error.rs  wakeup.rs
src/web/serialization/: device.rs
