[package]
name = "home-monitor-rs"
version = "0.1.0"
authors = ["Sascha Montellese <sascha.montellese@gmail.com>"]
edition = "2018"
description = "home-monitor-rs monitors network devices and controls one or more servers depending on the status of these devices."
readme = "README.md"
repository = "https://github.com/Montellese/home-monitor-rs"
license-file = "LICENSE"
keywords = ["network", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["std", "clock", "serde"] }
clap = { version = "3.2", features = ["derive"] }
exitcode = "1.1.2"
fastping-rs = "0.2.3"
log = "0.4.17"
macaddr = { version = "1.0", features = ["serde_std"] }
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"] }
pnet = { version = "0.31.0", features = ["std"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
signal-hook = "0.3.14"
simplelog = { version = "0.12.0", default-features = false }
ssh2 = "0.9"
temp-dir = "0.1"
tokio = { version = "1.21", features = ["full"] }
wakey = "0.2.2"

[dev-dependencies]
cargo-deb = "1.32.0"
mockall = "0.11.2"
rstest = "0.15.0"
sn_fake_clock = "0.4.14"

[package.metadata.deb]
extended-description = "home-monitor-rs is a service designed to run on an \"always online\" device (like a router or a Raspberry Pi) which constantly monitors a configurable list of network devices (based on their IP addresses) to see if any of them are online. Depending on the configured dependencies between servers and devices a server is automatically turned off using SSH if all relevant devices are offline. It at least one of the devices is online the server is automatically turned on using Wake-on-LAN."
section = "Utility"
assets = [
    ["target/release/home-monitor-rs", "/usr/bin/", "755"],
    ["home-monitor-rs.json.example", "/etc/home-monitor-rs/", "644"],
    ["README.md", "/usr/share/doc/home-monitor-rs/", "644"],
    ["LICENSE", "/usr/share/doc/home-monitor-rs/copyright", "644"],
]
maintainer-scripts = "debian/"
conf-files = ["./home-monitor-rs.json.example"]
systemd-units = { unit-scripts = "./", start = false }
