[package]
name = "home-monitor-rs"
version = "0.1.0"
authors = ["Sascha Montellese <sascha.montellese@gmail.com>"]
edition = "2018"
description = "home-monitor-rs monitors network devices and controls one or more servers depending on the status of these devices."
readme = "README.md"
repository = "https://github.com/Montellese/home-monitor-rs"
license-file = "LICENSE"
keywords = ["network", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["std", "clock", "serde"] }
clap = { version = "3.2", features = ["derive"] }
exitcode = "1.1.2"
fastping-rs = "0.2.3"
log = "0.4.17"
macaddr = { version = "1.0", features = ["serde_std"] }
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"] }
pnet = { version = "0.31.0", features = ["std"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
signal-hook = "0.3.14"
simplelog = { version = "0.12.0", default-features = false }
ssh2 = "0.9"
temp-dir = "0.1"
tokio = { version = "1.21", features = ["full"] }
wakey = "0.2.2"

[dev-dependencies]
mockall = "0.11.2"
rstest = "0.15.0"
sn_fake_clock = "0.4.14"
